--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_PREFIX=zfw_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
