--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-ide-helper": "^2.6",
+        "elasticsearch/elasticsearch": "^7.4",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.3"
     },
     "require-dev": {
