--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "elasticsearch/elasticsearch": "^7.4",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
+        "jaeger/querylist": "V3.2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
