--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "mews/captcha": "^2.3"
+        "mews/captcha": "^2.3",
+        "ext-zip": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
